kitchen/cookbooks/login_dot_gov/files/default/iptables
# Dropped off by Chef
*filter
:INPUT DROP [79:4476]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2362:194867]
:FWR - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A FWR -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FWR -p icmp -j ACCEPT
COMMIT
